[tool.poetry]
name = "lightning-grid-template"
version = "0.0.2"
description = "A minimal template for pytorch-lightning and grid.ai"
authors = ["Chenghao Mou <mouchenghao@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.6.1"
pytorch-lightning = "^1.3.2"
lightning-grid = "^0.3.70"
datasets = "^1.6.2"
jsonargparse = {extras = ["signatures"], version = "^3.12.1"}
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
